cluster/apps/biz-ops/mailu/mailu-web-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailu-web-ingress
  namespace: biz-ops
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd,auth-authelia-auth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - &host "mailu.${SECRET_DOMAIN}"
      secretName: mailu-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailu-front
                port:
                  number: 80
